# STARling_ua

./: Dockerfile  Procfile  README.md  docker-compose.yml  entrypoint.sh  example.env  exemple.env  fly.toml  manage.py  pyproject.toml
managers/: admin.py  models.py  urls.py  views.py
managers/migrations/: 0001_initial.py
messaging/: forms.py  models.py  urls.py  views.py
messaging/migrations/: 0001_initial.py
order/: forms.py  models.py  urls.py  views.py
order/migrations/: 0001_initial.py
schedule/: admin.py  forms.py  models.py  urls.py  views.py
schedule/migrations/: 0001_initial.py  0002_rename_time_lesson_start_time_lesson_end_time.py  0003_remove_lesson_end_time_lesson_duration.py
starlingua/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
students/: forms.py  models.py  tasks.py  urls.py  views.py
students/migrations/: 0001_initial.py  0002_student_paid_amount_student_paid_lessons.py  0003_student_lesson_price.py  0004_student_telegram_id.py
teachers/: admin.py  forms.py  models.py  urls.py  views.py
teachers/migrations/: 0001_initial.py  0002_teacher_conducted_lessons.py  0003_material.py
turnover/: admin.py  apps.py  decorators.py  forms.py  models.py  signals.py  urls.py  utils.py  views.py
turnover/migrations/: 0001_initial.py  0002_alter_client_options_alter_salary_options_and_more.py  0003_teachercalculation_hours_spent_and_more.py  0004_client_remaining_money_and_more.py  0005_remove_client_student_remove_client_teacher_and_more.py  0009_turnover_date.py  (+3 more)
users/: forms.py  models.py  urls.py  views.py
(+60 files in other folders)
